# CSE-284-Project

./: .gitignore  README.md  pyproject.toml  requirements.txt
Benchmarking Results/: GWAS_with_pca,ld (1).ipynb  GWAS_with_pca,ld.ipynb  GWAS_with_pca_and_ld.ipynb  Naive_GWAS.ipynb  gwas_linear_no_pca (1).ipynb  gwas_linear_no_pca.ipynb
data/: causal.snplist  chr22_with_pheno.bim
data/chr22/: chr22_casecontrol_clean.phen  chr22_quantitative_clean.phen  chr22_subset_small.bed  chr22_subset_small.bim  chr22_subset_small.fam
data/chr22_full/: chr22_casecontrol_latest.phen  chr22_quantitative_latest.phen
data/test/: ancestry.csv  geno.csv  pheno.csv
example data/: genotypes.bim  genotypes.raw
example_data/: causal.snplist
examples/: run_test.sh
src/gwas_tool/: __init__.py  cli.py  gwas.py  ld.py  pca.py  pca_and_ld.py  plots.py  real_data_pipeline.py  utils.py
tests/: test_gwas.py
