[project]
name = "CSE-284-Project"
version = "0.1.0"
description = "Manual GWAS with PCA correction"
authors = [{name="Your Name"}]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
