[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gwas-tool"
version = "0.1.0"
description = "A vectorized Python GWAS tool with optional LD Pruning and PCA correction"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "psutil",
    "statsmodels"
]

[project.scripts]
gwas-tool = "gwas_tool.cli:main"
